--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@
 <body class="relative min-h-screen bg-gradient-to-br from-slate-50 via-white to-slate-100 text-slate-900 antialiased dark:from-slate-950 dark:via-slate-900 dark:to-slate-950 dark:text-slate-100">
   <a class="skip-link" href="#mainContent">Skip to main content</a>
   <!-- CODEX: CONSOLE HERO OVERLAY (3D logo + particles) -->
-  <div id="console-hero" aria-hidden="true"
-       style="position:absolute; inset:0; pointer-events:none; display:none;">
+  <div id="console-hero" aria-hidden="true">
     <!-- Canvas behind the logo for particles -->
     <canvas id="console-particles" width="0" height="0"
             style="position:absolute; inset:0; width:100%; height:100%;"></canvas>
