Improve fractal zoom precision and iteration scaling

--- a/fractal.html
+++ b/fractal.html
@@ -245,6 +245,7 @@
     <span>Scroll or pinch to zoom. Drag to pan. Press <strong>space</strong> to toggle autopilot.</span>
     <a href="/math-gallery.html">Prefer a gallery of math demos? Visit the interactive collection →</a>
   </footer>
+  <script src="/js/fractal/precision.js" defer></script>
   <script src="/js/fractal/renderer.js" defer></script>
   <script src="/js/fractal/lab.js" defer></script>
 </body>
